fixing image alignment

--- a/css/slides.css
+++ b/css/slides.css
@@ -3,7 +3,7 @@
     background-color: #efefef;
     font-family: Arial;
     margin-bottom: 20px;
-    padding: 10px 9px;
+    padding: 10px 8px;
     font-size: 11px;
     color: #666;
     -webkit-box-shadow: 3px 4px 4px #ccc;
